Updated comment credit

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+/************************************
+ * Author      : Rainulf            *
+ * Website     : rainulf.ca         *
+ * Email       : rainulf@rainulf.ca *
+ ************************************/
+
 body {
 	font-family:arial, verdana, helvetica, sans-serif;
 	font-size:12px;
